tests/paczka1/fuzzy1/79767430.err
Error in line 1: xRALZw A154 92,3
Error in line 20: qEJOxuBQpR4 A472 66,1
Error in line 21: A472 A572 71,2
Error in line 36: dpKffY5Rp8z A572 49,1
Error in line 38: dpKffY5Rp8z A472 45,8
